# invoice-bun

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  main.py  pyproject.toml  server.py  test_weasyprint.py  verify_invoice_flow.py
backend/app/: db.py  main.py  models.py  security.py
backend/app/api/: auth.py  deps.py  invoices.py  users.py
backend/app/core/: config.py
backend/app/services/: pdf_service.py
backend/app/templates/: invoice.html
backend/invoice_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: fix_db_schema.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py
docs/: spec.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/layout/: DashboardLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AuthCallback.tsx  Dashboard.tsx  InvoiceEditor.tsx  InvoicesList.tsx  Login.tsx  Register.tsx
